ops/staging.gateway.yaml
# See more at https://istio.io/docs/reference/config/networking/gateway/
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: invyce-staging-gateway
spec:
  selector:
    istio: ingress
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - 'staging.invyce.com'
  # - port:
  #     number: 443
  #     name: https
  #     protocol: HTTPS
  #   hosts:
  #   - '*/*.invyce.com'
  #   - '*/invyce.com'
  #   tls:
  #     mode: SIMPLE
  #     serverCertificate: /etc/istio/ingressgateway-certs/invyce-io-crt.pem
  #     privateKey: /etc/istio/ingressgateway-certs/invyce-io-key.pem
